# tera-terminal-ai

./: .gitignore  LICENSE  README.md  pyproject.toml  run_tera.py
docs/: README.en.md  llm_sources.en.md  llm_sources.md
src/tera/: __init__.py  __main__.py  chat.py  cli.py  config.py  exceptions.py  memory.py  storage.py
src/tera/chat/: __init__.py  chat_session.py  code_executor.py  message_handler.py
src/tera/models/: __init__.py  character.py  message.py  source.py  store.py
src/tera/repositories/: __init__.py  store_repository.py
src/tera/services/: __init__.py  character_service.py  memory_service.py  source_service.py
