[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tera-terminal-ai"
version = "0.1.0"
description = "命令行 AI 聊天工具，支持多源配置。"
authors = [
  { name="xcczach", email="2867389537@qq.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "click>=8.1.6",
  "openai>=1.2.4",
  "rich>=13.5.2",
  "tqdm",
  "transformers>=4.51.0",
  "sentence-transformers>=2.7.0",
  "faiss-cpu>=1.7.4",
  "torch"
]

[project.scripts]
tera = "tera.cli:main" 